2016-12-06 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: mod_rivet_ng now default for
    builing mod_rivet
    * src/mod_rivet_ng/rivetCore.c: safer condition
    testing should avoid assumptions about how
    the compiler builds pointer comparisons
    * src/mod_rivet_ng/worker_prefork_common.c: 
    before running the child init script the
    running configuration pointer is the thread
    private data has to be set
    * tests/broken.test: new error message structure
    * tests/checkfails.tcl, failtest.tcl: changed
    value returned by one of the tests

2016-12-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl: new
    method synch saves in the session cache data
    coming from form
    * src/mod_rivet_ng/mod_rivet_common.c: more
    careful design assign to a single function
    the task of determining the current configuration
    when an interpreter is initialized

2016-11-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_lazy_mpm.c:
    * src/mod_rivet_ng/worker_prefork_mpm.c: setting
    the running_conf pointer in the thread private
    data enables ::rivet::inspect to return 
    meaningful data even outside of request processing (in
    the forms that make sense)
    * src/mod_rivet_ng/rivetCore.c: more accurate
    determination of the rivet_server_rec makes
    possible to determine the pointer also
    outside a request processing

2016-11-28 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/: new configuration directives
    RequestHandler (request handling procedure), ImportRivetNS
    and ExportRivetNS (override parameters for
    build options). RequestHandler enables rivet
    to run an application specific request handler.
    * src/mod_rivet_ng/rivetInspect.c: now runs also
    during the server initialization stage. The whole
    rivet core is setup during that phase but only
    a few commands are actually operational (most